<resources>
    <string name="app_name">Wallet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Data</string>
    <string name="title_notifications">Stat</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_expence">ExpenceActivity</string>
    <string name="recurrent">Recurrent</string>
    <string name="each_month">Each month</string>
    <string name="each_year">each year</string>
    <string name="title_activity_expense_list">ExpenseListActivity</string>
    <string name="title_activity_authentication">Authentication</string>
    <string name="login">login</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">You must login!</string>
    <string name="error_authentication_canceled">Authentication canceled</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error has occurred</string>
    <string name="connection_succeed">Successful authentication!</string>
    <string name="button_login_text_logged">Display Profil</string>
    <string name="button_login_text_not_logged">Log in</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Your profile</string>
    <string name="text_input_username">User name</string>
    <string name="text_view_email">E-mail address :</string>
    <string name="button_sign_out_account">Sign Out</string>
    <string name="info_no_email_found">No email address</string>
    <string name="info_no_username_found">No username</string>
    <string name="popup_message_choice_yes">Yes !</string>
    <string name="popup_message_choice_no">No</string>


    <string name="profile">profile</string>
    <string name="expense_current_month">Expense current month : </string>
    <string name="expense_current_day">Expense current day</string>
    <string name="current_month_expense">Current month\'s expenses</string>
    <string name="expenses_vs_budget_of_the_current_month">Expenses VS Budget of the current month</string>
    <string name="update_budget">update budget</string>
    <string name="budget">Month budget : </string>
    <string name="user_name">User name : </string>
    <string name="budget_updated">Budget updated</string>
    <string name="appwidget_text">Expenses</string>
    <string name="add_widget">Add widget</string>
    <string name="origin">Origin</string>
    <string name="default_value">500</string>
    <string name="percent">%</string>
    <string name="defaultexpense_day">200</string>
    <string name="title">Title</string>
    <string name="year">2019</string>
    <string name="select_date">select date</string>
    <string name="profile_image">profile image</string>
    <string name="selected">Selected:</string>
    <string name="cost">Cost</string>

</resources>
