<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.profile.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="center">

                <ImageView
                    android:id="@+id/profile_activity_imageview_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_anon_user_48dp"
                    android:contentDescription="@string/profile_image"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold"
                    />

            <TextView
                android:id="@+id/profile_activity_edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/text_input_username"
                android:textSize="@dimen/default_text_size" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_email"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_activity_text_view_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/default_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/budget"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_activity_edit_text_budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/budget"
                    android:inputType="number"
                    android:textSize="@dimen/default_text_size" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/profile_activity_button_update_budget"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/button_radius_primary_color"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/update_budget"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

            <!-- BUTTON SIGN OUT -->
            <Button
                android:id="@+id/profile_activity_button_sign_out"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/button_radius_accent_color"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/button_sign_out_account"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>

    </LinearLayout>

</layout>
